# TMCCInterface

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  demo.cpp
demo/twitch/: .gitignore  graph.js  package-lock.json  package.json  server.js  twitch.js
demo/twitch/graphs/: package-lock.json  package.json
demo/twitch/graphs/src/js/: main.js
demo/twitch/graphs/src/scss/: styles.scss
demo/webapp/: package-lock.json  package.json  server.js  test.js  webpack.config.js
demo/webapp/src/js/: main.js
demo/webapp/src/scss/: styles.scss
include/: TMCCInterface.h  types.h
src/: TMCCInterface.cpp
testapp/: CMakeLists.txt  testapp.cpp
